# seletive

./: .gitignore  README.md  env  manage.py  pyproject.toml
seletive/: settings.py  urls.py
seletive/emprego/: admin.py  apps.py  facade.py  models.py  urls.py  views.py
seletive/emprego/migrations/: 0001_initial.py  0002_emprego_email.py  0003_tarefa.py  0004_emails.py
seletive/emprego/templates/emprego/: detalhe.html  registro.html
seletive/empresa/: admin.py  apps.py  facade.py  models.py  urls.py  views.py
seletive/empresa/migrations/: 0001_initial.py  0002_delete_emprego.py
seletive/empresa/templates/empresa/: detalhe.html  listagem.html  registro.html
seletive/templates/: base.html
seletive/templates/partials/: messages.html
seletive/templates/static/base/css/: base.css
seletive/templates/static/company/css/: detail_company.css  list_companies.css
