[tool.poetry]
name = "seletive"
version = "0.1.0"
description = ""
authors = ["Ricardo-Jackson-Ferrari <ricjferrari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
pillow = "^9.3.0"
python-decouple = "^3.6"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
isort = "^5.10.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
